# pitchdeck-assistant

./: .env.example  .gitignore  README.md  docker-compose.vps.yml  docker-compose.yml  pitchdeck-assistant.webagab.fr.conf  pitchdeck-langfuse.webagab.fr.conf  template.webagab.fr.conf
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_pipeline_transitions_and_tenant_config.py  003_analysis_tables.py  004_vector_embeddings.py  005_corpus_a_outcome.py  006_engagement_events.py  007_deal_custom_stage.py  007_deal_triage.py  008_deal_triage.py  009_deal_documents_chat.py  010_partner_review.py  011_dd_question_answers.py
backend/app/: main.py
backend/app/api/: deps.py  health.py  users.py
backend/app/api/routes/: analysis.py  analytics.py  annotations.py  chat.py  deals.py  decks.py  documents.py  events.py  pipeline.py  pipeline_config.py  (+4 more)
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: analysis.py  base.py  chat.py  corpus.py  deal_documents.py  engagement.py  pipeline.py  review.py
backend/app/services/: analysis_service.py  chat_service.py  document_parser.py  embedding_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/scripts/: provision_tenant.py
backend/tests/: conftest.py  test_analysis_service.py  test_analytics.py  test_annotations.py  test_auth.py  test_corpus_a.py  test_corpus_b.py  test_decks.py  test_document_parser.py  test_engagement.py  test_health.py  test_pipeline.py  test_pipeline_config.py  test_scorecard_config.py
(+78 files in other folders)
